--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
   "name": "checkin-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "@emailjs/browser": "^4.3.3",
+    "@hapi/joi": "^17.1.1",
+    "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.19.2",
+    "http-errors": "^2.0.0",
+    "joi": "^17.13.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.8.0",
-    "mongoose": "^8.5.4"
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.5.2",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.4",
+    "paystack": "^2.0.1",
+    "qrcode": "^1.5.4",
+    "redis": "^4.6.13"
   }
 }
